@@ -158,12 +158,12 @@
                 <configuration>
                     <source>${java.source}</source>
                     <target>${java.target}</target>
-                </configuration>
+				</configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.5.3</version>
                 <configuration>
                     <remoteTagging>false</remoteTagging>
                     <suppressCommitBeforeTag>false</suppressCommitBeforeTag>
@@ -188,7 +188,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -202,7 +202,7 @@
                 <!-- explicitly define maven-deploy-plugin after other to force exec order -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.7</version>
+                <version>2.8.2</version>
                 <executions>
                     <execution>
                         <id>deploy</id>
@@ -216,7 +216,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.7</version>
 				<configuration>
 					<skip>${maven.site.plugin.skip}</skip>
 				</configuration>
@@ -224,7 +224,7 @@
 					<dependency>
 						<groupId>org.apache.maven.doxia</groupId>
 						<artifactId>doxia-module-markdown</artifactId>
-						<version>1.3</version>
+						<version>1.8</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -233,7 +233,7 @@
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
                 <artifactId>wagon-webdav-jackrabbit</artifactId>
-                <version>1.0-beta-7</version>
+                <version>3.0.0</version>
             </extension>
         </extensions>
 		<pluginManagement>
@@ -246,7 +246,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.0.0-M1</version>
+					<version>3.0.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -289,7 +289,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
+                        <version>1.6</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -314,14 +314,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <configuration>
-                       <additionalparam>-Xdoclint:none</additionalparam>
+                       <additionalJOption>
+						   -Xdoclint:none
+					   </additionalJOption>
                     </configuration>
                  </plugin>
               </plugins>
            </build>
         </profile>
 		<profile>
-			<id>javadoc-plugin-java9</id>
+			<id>java-9</id>
 			<activation>
 				<jdk>[9,)</jdk>
 			</activation>
@@ -329,9 +331,33 @@
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.20.1</version>
+						<configuration>
+							<argLine>
+								--add-modules=java.xml.bind
+								--illegal-access=warn
+							</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>2.20.1</version>
+						<configuration>
+							<argLine>
+								--add-modules=java.xml.bind
+								--illegal-access=warn
+							</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
-							<additionalparam>--add-modules ALL-SYSTEM</additionalparam>
+							<additionalJOption>
+								--add-modules=java.xml.bind
+							</additionalJOption>
 						</configuration>
 					</plugin>
 				</plugins>
